-Trying to make icon in Popup.
-Progress bar currently available only on emulator. There is a bug in Tizen on real Samsung devices.
-Few minor fixes.