@@ -5,3 +5,4 @@ Coverage_Report
 .sign
 reportASAN.txt
 .package-stamp
+.vscode
