@@ -7,14 +7,16 @@
 #include <device/haptic.h>
 #include <dlog.h>
 #include <efl_extension.h>
+#include <sound_manager.h>
 #include <stdio.h>
 #include <system_settings.h>
 #include <time.h>
+#include <player.h>
 
 #ifdef LOG_TAG
 #undef LOG_TAG
 #endif
-#define LOG_TAG "watercleaner"
+#define LOG_TAG "Water Cleaner"
 
 #if !defined(PACKAGE)
 #define PACKAGE "com.vadvergasov.watercleaner"
