@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<manifest xmlns="http://tizen.org/ns/packages" api-version="2.3.2" package="com.vadvergasov.watercleaner" version="2.0.0">
+<manifest xmlns="http://tizen.org/ns/packages" api-version="2.3.2" package="com.vadvergasov.watercleaner" version="2.1.0">
     <author email="vadim.vergasov2003@gmail.com">VadVergasov</author>
     <description>This app will help you to clean the watches after swimming.</description>
     <profile name="wearable"/>
